Remove invalid compiler flag (--illegal-access=warn is a run-time flag only).