@@ -88,10 +88,6 @@ configurations {
     testArtifacts.extendsFrom testRuntime
 }
 
-tasks.withType(JavaCompile) {
-    options.compilerArgs += ['--illegal-access=warn']
-}
-
 task testJar(type: Jar) {
     classifier "tests"
     from sourceSets.test.output
